# arduino-libs

./: .gitignore  CMakeLists.txt  README.md
OTAResolver/: README.md  library.properties
OTAResolver/src/: OTAResolver.cpp  OTAResolver.h
ota_resolver/: library.properties
ota_resolver/src/: OTA_Resolver.cpp  OTA_Resolver.h
